--- a/nginx/magento2.conf
+++ b/nginx/magento2.conf
@@ -2,11 +2,9 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name {{SERVER_NAME}};
-    #server_name magento2.local.dnalab.online;
+    server_name magento2.local.dnalab.online;
 
-    set $MAGE_ROOT {{SERVER_PATH}};
-    #set $MAGE_ROOT /var/www/magento2;
+    set $MAGE_ROOT /var/www/magento2;
     set $MAGE_MODE developer;
     root $MAGE_ROOT/pub;
 
@@ -17,8 +15,7 @@ server {
     location /shell {
         root $MAGE_ROOT;
         location ~ ^/shell/* {
-            fastcgi_pass   {{FASTCGI_PASS}};
-            #fastcgi_pass /var/run/php/php7.2-fpm.sock;
+            fastcgi_pass unix:/run/php/php7.2-fpm.sock;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
             include        fastcgi_params;
@@ -28,8 +25,7 @@ server {
     location /setup {
         root $MAGE_ROOT;
         location ~ ^/setup/index.php {
-            fastcgi_pass   {{FASTCGI_PASS}};
-            #fastcgi_pass /var/run/php/php7.2-fpm.sock;
+            fastcgi_pass unix:/run/php/php7.2-fpm.sock;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
             include        fastcgi_params;
@@ -49,8 +45,7 @@ server {
 
         location ~ ^/update/index.php {
             fastcgi_split_path_info ^(/update/index.php)(/.+)$;
-            fastcgi_pass   {{FASTCGI_PASS}};
-            #fastcgi_pass /var/run/php/php7.2-fpm.sock;
+            fastcgi_pass unix:/run/php/php7.2-fpm.sock;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
             fastcgi_param  PATH_INFO        $fastcgi_path_info;
@@ -153,8 +148,7 @@ server {
 
     location ~ (index|get|static|report|404|503)\.php$ {
         try_files $uri =404;
-        fastcgi_pass   {{FASTCGI_PASS}};
-        #fastcgi_pass /var/run/php/php7.2-fpm.sock;
+        fastcgi_pass unix:/run/php/php7.2-fpm.sock;
 
         fastcgi_param  PHP_FLAG  "session.auto_start=off \n suhosin.session.cryptua=off";
         fastcgi_param  PHP_VALUE "memory_limit=1024M \n max_execution_time=18000";
