--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -2,11 +2,9 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name {{SERVER_NAME}};
-    #server_name laravel.local.dnalab.online;
+    server_name laravel.local.dnalab.online;
 
-    root {{SERVER_PATH}}/public;
-    #root /var/www/laravel/public;
+    root /var/www/laravel/public;
     index index.php index.html index.htm;
 
     location / {
@@ -15,8 +13,7 @@ server {
 
     location ~ \.php$ {
         try_files $uri /index.php =404;
-        fastcgi_pass {{FASTCGI_PASS}};
-        #fastcgi_pass /var/run/php/php7.2-fpm.sock;
+        fastcgi_pass unix:/run/php/php7.2-fpm.sock;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
